[add] add test case