@@ -41,7 +41,7 @@ public class DoublyLinkedListTest {
 	@Test
 	public void add_addThree_ExpectThemAddedToEnd() {
 		DoublyLinkedList list = new DoublyLinkedList<Integer>();
-		List expectedOrder = Arrays.asList(5, 10, 15);
+		List expectedOrder = List.of(5, 10, 15);
 
 		list.add(5);
 		list.add(10);
@@ -67,7 +67,7 @@ public class DoublyLinkedListTest {
 	@Test
 	public void add_atIndex0_ExpectListInReverseOrder() {
 		DoublyLinkedList list = new DoublyLinkedList<String>();
-		List expectedOrder = Arrays.asList("Geralt", "of", "Rivia");
+		List expectedOrder = List.of("Geralt", "of", "Rivia");
 
 		list.add(0, "Rivia");
 		list.add(0, "of");
@@ -79,7 +79,7 @@ public class DoublyLinkedListTest {
 	@Test
 	public void addAll_ShouldAddAllItemsToEnd() {
 		DoublyLinkedList list = new DoublyLinkedList<Integer>();
-		List toAdd = Arrays.asList(3, 4, 5, 6);
+		List toAdd = List.of(3, 4, 5, 6);
 		int expectedSize = 6;
 
 		list.add(1);
@@ -95,7 +95,7 @@ public class DoublyLinkedListTest {
 	@Test
 	public void addAll_AtSpecificIndex_ShouldAddAllItemsAtIndex() {
 		DoublyLinkedList list = new DoublyLinkedList<Integer>();
-		List toAdd = Arrays.asList(3, 4, 5, 6);
+		List toAdd = List.of(3, 4, 5, 6);
 		int expectedSize = 6;
 
 		list.add(1);
@@ -192,7 +192,7 @@ public class DoublyLinkedListTest {
 		DoublyLinkedList list = new DoublyLinkedList<Integer>();
 		int expectedIndex = 5;
 		int value = 42;
-		List toAdd = Arrays.asList(0, 1, value, value, 4, value, 6, 7, 8, 9, 10);
+		List toAdd = List.of(0, 1, value, value, 4, value, 6, 7, 8, 9, 10);
 
 		list.addAll(toAdd);
 
@@ -204,7 +204,7 @@ public class DoublyLinkedListTest {
 		DoublyLinkedList list = new DoublyLinkedList<Integer>();
 		int expectedIndex = -1;
 		int value = 42;
-		List toAdd = Arrays.asList(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+		List toAdd = List.of(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
 
 		list.addAll(toAdd);
 
@@ -216,7 +216,7 @@ public class DoublyLinkedListTest {
 		DoublyLinkedList<String> list = new DoublyLinkedList<String>();
 		int removeAt = 0;
 		String value = "hello";
-		List toAdd = Arrays.asList(value, "world", "I'm", "java");
+		List toAdd = List.of(value, "world", "I'm", "java");
 		list.addAll(toAdd);
 		int sizeBeforeRemove = list.size();
 
@@ -234,7 +234,7 @@ public class DoublyLinkedListTest {
 		DoublyLinkedList<String> list = new DoublyLinkedList<String>();
 		int removeAt = 0;
 		String value = "hello";
-		List toAdd = Arrays.asList(value, "world", "I'm", "java");
+		List toAdd = List.of(value, "world", "I'm", "java");
 		list.addAll(toAdd);
 		int sizeBeforeRemove = list.size();
 
@@ -256,7 +256,7 @@ public class DoublyLinkedListTest {
 	@Test
 	public void iterator_FullListHasNext_ShouldReturnTrue() {
 		DoublyLinkedList list = new DoublyLinkedList<String>();
-		List toAdd = Arrays.asList("Sterling", "Goodfellow", "Iacas", "Tonwen");
+		List toAdd = List.of("Sterling", "Goodfellow", "Iacas", "Tonwen");
 		list.addAll(toAdd);
 		Iterator<String> itr = list.iterator();
 		assertTrue(itr.hasNext());
@@ -265,7 +265,7 @@ public class DoublyLinkedListTest {
 	@Test
 	public void iterator_FullListNext_ShouldGetItem() {
 		DoublyLinkedList<String> list = new DoublyLinkedList<String>();
-		List toAdd = Arrays.asList("Sterling", "Goodfellow", "Iacas", "Tonwen");
+		List toAdd = List.of("Sterling", "Goodfellow", "Iacas", "Tonwen");
 		list.addAll(toAdd);
 		Iterator<String> itrToAdd = toAdd.iterator();
 		for (String element : list)
@@ -275,7 +275,7 @@ public class DoublyLinkedListTest {
 	@Test
 	public void iterator_FullListHasPrev_ShouldReturnFalse() {
 		DoublyLinkedList list = new DoublyLinkedList<String>();
-		List toAdd = Arrays.asList("Sterling", "Goodfellow", "Iacas", "Tonwen");
+		List toAdd = List.of("Sterling", "Goodfellow", "Iacas", "Tonwen");
 		list.addAll(toAdd);
 		ListIterator<String> itr = list.listIterator();
 		assertFalse(itr.hasPrevious());
@@ -284,7 +284,7 @@ public class DoublyLinkedListTest {
 	@Test
 	public void iterator_FullListHasPrev_ShouldReturnTrue() {
 		DoublyLinkedList list = new DoublyLinkedList<String>();
-		List toAdd = Arrays.asList("Sterling", "Goodfellow", "Iacas", "Tonwen");
+		List toAdd = List.of("Sterling", "Goodfellow", "Iacas", "Tonwen");
 		list.addAll(toAdd);
 		ListIterator<String> itr = list.listIterator();
 		itr.next();
@@ -294,7 +294,7 @@ public class DoublyLinkedListTest {
 	@Test
 	public void iterator_FullListWithAddAllPrev_ShouldGetItem() {
 		DoublyLinkedList list = new DoublyLinkedList<String>();
-		List toAdd = Arrays.asList("Sterling", "Goodfellow", "Iacas", "Tonwen");
+		List toAdd = List.of("Sterling", "Goodfellow", "Iacas", "Tonwen");
 		list.addAll(toAdd);
 		ListIterator<String> itr = list.listIterator();
 		itr.next();
@@ -333,7 +333,7 @@ public class DoublyLinkedListTest {
 	public void iterator_FullListWithAddAllIndexPrev_ShouldGetItem() {
 		DoublyLinkedList list = new DoublyLinkedList<String>();
 		list.add(0, "Tonwen");
-		List toAdd = Arrays.asList("Sterling", "Goodfellow", "Iacas");
+		List toAdd = List.of("Sterling", "Goodfellow", "Iacas");
 		list.addAll(0, toAdd);
 		ListIterator<String> itr = list.listIterator();
 		itr.next();
@@ -351,7 +351,7 @@ public class DoublyLinkedListTest {
 	@Test
 	public void iterator_FullListWithRemoveIndexHeadPrev_ShouldGetItem() {
 		DoublyLinkedList list = new DoublyLinkedList<String>();
-		List toAdd = Arrays.asList("Sterling", "Goodfellow", "Iacas", "Tonwen");
+		List toAdd = List.of("Sterling", "Goodfellow", "Iacas", "Tonwen");
 		list.addAll(toAdd);
 		list.remove(0);
 		ListIterator<String> itr = list.listIterator();
@@ -368,7 +368,7 @@ public class DoublyLinkedListTest {
 	@Test
 	public void iterator_FullListWithRemoveIndexPrev_ShouldGetItem() {
 		DoublyLinkedList list = new DoublyLinkedList<String>();
-		List toAdd = Arrays.asList("Sterling", "Goodfellow", "Iacas", "Tonwen");
+		List toAdd = List.of("Sterling", "Goodfellow", "Iacas", "Tonwen");
 		list.addAll(toAdd);
 		list.remove(1);
 		ListIterator<String> itr = list.listIterator();
@@ -385,7 +385,7 @@ public class DoublyLinkedListTest {
 	@Test
 	public void iterator_FullListWithRemoveHeadPrev_ShouldGetItem() {
 		DoublyLinkedList list = new DoublyLinkedList<String>();
-		List toAdd = Arrays.asList("Sterling", "Goodfellow", "Iacas", "Tonwen");
+		List toAdd = List.of("Sterling", "Goodfellow", "Iacas", "Tonwen");
 		list.addAll(toAdd);
 		list.remove("Sterling");
 		ListIterator<String> itr = list.listIterator();
@@ -402,7 +402,7 @@ public class DoublyLinkedListTest {
 	@Test
 	public void iterator_FullListWithRemoveTailPrev_ShouldGetItem() {
 		DoublyLinkedList list = new DoublyLinkedList<String>();
-		List toAdd = Arrays.asList("Sterling", "Goodfellow", "Iacas", "Tonwen");
+		List toAdd = List.of("Sterling", "Goodfellow", "Iacas", "Tonwen");
 		list.addAll(toAdd);
 		list.remove("Tonwen");
 		ListIterator<String> itr = list.listIterator();
