@@ -41,7 +41,7 @@ public class LinkedListTest {
 	@Test
 	public void add_addThree_ExpectThemAddedToEnd() {
 		LinkedList<Integer> list = new LinkedList<Integer>();
-		List expectedOrder = Arrays.asList(5, 10, 15);
+		List expectedOrder = List.of(5, 10, 15);
 
 		list.add(5);
 		list.add(10);
@@ -67,7 +67,7 @@ public class LinkedListTest {
 	@Test
 	public void add_atIndex0_ExpectListInReverseOrder() {
 		LinkedList<String> list = new LinkedList<String>();
-		List expectedOrder = Arrays.asList("Geralt", "of", "Rivia");
+		List expectedOrder = List.of("Geralt", "of", "Rivia");
 
 		list.add(0, "Rivia");
 		list.add(0, "of");
@@ -79,7 +79,7 @@ public class LinkedListTest {
 	@Test
 	public void addAll_ShouldAddAllItemsToEnd() {
 		LinkedList<Integer> list = new LinkedList<Integer>();
-		List toAdd = Arrays.asList(3, 4, 5, 6);
+		List toAdd = List.of(3, 4, 5, 6);
 		int expectedSize = 6;
 
 		list.add(1);
@@ -95,7 +95,7 @@ public class LinkedListTest {
 	@Test
 	public void addAll_AtSpecificIndex_ShouldAddAllItemsAtIndex() {
 		LinkedList<Integer> list = new LinkedList<Integer>();
-		List toAdd = Arrays.asList(3, 4, 5, 6);
+		List toAdd = List.of(3, 4, 5, 6);
 		int expectedSize = 6;
 
 		list.add(1);
@@ -192,7 +192,7 @@ public class LinkedListTest {
 		LinkedList<Integer> list = new LinkedList<Integer>();
 		int expectedIndex = 5;
 		int value = 42;
-		List toAdd = Arrays.asList(0, 1, value, value, 4, value, 6, 7, 8, 9, 10);
+		List toAdd = List.of(0, 1, value, value, 4, value, 6, 7, 8, 9, 10);
 
 		list.addAll(toAdd);
 
@@ -204,7 +204,7 @@ public class LinkedListTest {
 		LinkedList<Integer> list = new LinkedList<Integer>();
 		int expectedIndex = -1;
 		int value = 42;
-		List toAdd = Arrays.asList(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+		List toAdd = List.of(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
 
 		list.addAll(toAdd);
 
@@ -216,7 +216,7 @@ public class LinkedListTest {
 		LinkedList<String> list = new LinkedList<String>();
 		int removeAt = 0;
 		String value = "hello";
-		List toAdd = Arrays.asList(value, "world", "I'm", "java");
+		List toAdd = List.of(value, "world", "I'm", "java");
 		list.addAll(toAdd);
 		int sizeBeforeRemove = list.size();
 
@@ -235,7 +235,7 @@ public class LinkedListTest {
 		int removeAt = 42;
 		String value = "hello";
 
-		List toAdd = Arrays.asList(value, "world", "I'm", "java");
+		List toAdd = List.of(value, "world", "I'm", "java");
 		list.addAll(toAdd);
 		int sizeBeforeRemove = list.size();
 
@@ -250,7 +250,7 @@ public class LinkedListTest {
 		LinkedList<String> list = new LinkedList<String>();
 		int removeAt = 0;
 		String value = "hello";
-		List toAdd = Arrays.asList(value, "world", "I'm", "java");
+		List toAdd = List.of(value, "world", "I'm", "java");
 		list.addAll(toAdd);
 		int sizeBeforeRemove = list.size();
 
@@ -272,7 +272,7 @@ public class LinkedListTest {
 	@Test
 	public void iterator_FullListHasNext_ShouldReturnTrue() {
 		LinkedList<String> list = new LinkedList<String>();
-		List toAdd = Arrays.asList("Sterling", "Goodfellow", "Iacas", "Tonwen");
+		List toAdd = List.of("Sterling", "Goodfellow", "Iacas", "Tonwen");
 		list.addAll(toAdd);
 		Iterator<String> itr = list.iterator();
 		assertEquals(itr.hasNext(), true);
@@ -281,7 +281,7 @@ public class LinkedListTest {
 	@Test
 	public void iterator_FullListNext_ShouldGetItem() {
 		LinkedList<String> list = new LinkedList<String>();
-		List toAdd = Arrays.asList("Sterling", "Goodfellow", "Iacas", "Tonwen");
+		List toAdd = List.of("Sterling", "Goodfellow", "Iacas", "Tonwen");
 		list.addAll(toAdd);
 		Iterator<String> itrToAdd = toAdd.iterator();
 		for (String element : list)
